修复 sonar bugs